--- a/Stylesheet.scss
+++ b/Stylesheet.scss
@@ -1,4 +1,7 @@
+/* IMPORTING DEPENDENCIES */
 @import '_mixins';
+@import '_animations';
+
 
 /* BORDER-BOX DECLARATION */
 html,
@@ -10,6 +13,7 @@ html,
     margin: 0;
     font-family: sans-serif;
 }
+
 
 /* USING BEM ARCHITECTURE */
 /* MOBILE FIRST */
@@ -33,16 +37,15 @@ html,
             &.list--modifier{
                 background-color: rgb(0, 183, 255);
                 color: white;
-                position: fixed;
-                top: 0;
-                z-index: 10;
+                border-bottom: 0.5px solid white;
             }
         }
     }
 }
 
-.wrapper{
+.wrap{
     padding-top: 150px;
+    padding-bottom: 15px;
     width: 100%;
     color: white;
     background-color: rgb(0, 183, 255);
@@ -62,22 +65,25 @@ html,
         }
         &__brief{
             flex: 0 0 50%;
+            .brief-paragraph2{
+                display: none;
+            }
         }
         &__image{
             flex: 0 0 50%;
             .image{
                 width: 70%;
-                margin-left: 15%;
-                margin-right: 15%;
+                margin: 10% 15% 10% 15%;
                 height: 80%;
             }
         }
         &__social{
             flex: 0 0 100%;
+            margin-top: 20px;
         }
     }
-    .experience{
-        &.experience--modifier{
+    .skills{
+        &.skills--modifier{
             @include theme(white);
         }
         &__heading{
@@ -92,8 +98,8 @@ html,
             margin: auto;
         }
     }
-    .skills{
-        &.skills--modifier{
+    .experience{
+        &.experience--modifier{
             @include theme(white);
         }
         &__heading{
@@ -135,8 +141,8 @@ html,
             font-weight: 400;
         }
         &__image{
-            height: 60px;
-            width: 60px;
+            height: 100px;
+            width: 100px;
             margin: auto;
         }
     }
@@ -156,4 +162,119 @@ html,
             margin: auto;
         }
     }
+}
+.footer{
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 8px;
+    &.footer--modifier{
+        background-color: teal;
+        color: white;
+        letter-spacing: 1px;
+        font-size: 15px;
+    }
+    &__paragraph{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 15px;
+        text-align: center;
+        opacity: 0.8;
+    }
+    &__heading{
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 100;
+        margin-top: 15px;
+        opacity: 0.7;
+    }
+    &__list{
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+        .contact{
+            list-style-type: none;
+            text-align: center;
+            opacity: 0.7;
+        }
+    }
+}
+
+
+/* DESKTOP MODIFICATIONS*/
+@media only screen and (min-width: 800px){
+    .wrap{
+        display: flex;
+        flex-flow: row wrap;
+        align-items: stretch;
+        .intro{
+            flex: 0 0 90%;
+            margin: auto;
+            display: flex;
+            flex-flow: row wrap;
+            align-items: stretch;
+            &.intro--modifier{
+                font-size: 16px;
+            }
+            &__brief{
+                flex: 0 0 50%;
+                .brief-paragraph1{
+                    margin-top: 20%;
+                }
+                .brief-paragraph2{
+                    display: block;
+                    margin-top: 10%;
+                }
+            }
+            &__image{
+                flex: 0 0 50%;
+                .image{
+                    width: 70%;
+                    margin: 10% 15% 10% 15%;
+                    height: 80%;
+                }
+            }
+            &__social{
+                flex: 0 0 100%;
+                margin-top: 20px;
+            }
+        }
+        .skills{
+            flex: 0 0 42.5%;
+            padding-top: 15px;
+            &.skills--modifier{
+                @include themeDesktop(white, 5%);
+            }
+        }
+        .experience{
+            flex: 0 0 42.5%;
+            &.experience--modifier{
+                @include themeDesktop(white, 5%);
+            }
+        }
+        .academic{
+            flex: 0 0 42.5%;
+            &.academic--modifier{
+                @include themeDesktop(white, 5%);
+            }
+        }
+        .about{
+            flex: 0 0 42.5%;
+            &.about--modifier{
+                @include themeDesktop(white, 5%);
+            }
+        }
+        .hobbies{
+            flex: 0 0 42.5%;
+            &.hobbies--modifier{
+                @include themeDesktop(white, 28.75%);
+            }
+        }
+    }
+}
+
+/* TABLET MODIFICATIONS */
+@media only screen and (min-width: 299px) and (max-width: 799px){
+
 }
