--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,10 +1,20 @@
 @mixin theme($color) {
     color: $color;
     margin-top: 100px;
-    font-size: 13px;
+    font-size: 16px;
     letter-spacing: 1.3px;
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
+    text-align: center;
+}
+
+@mixin themeDesktop($color, $left-margin) {
+    color: $color;
+    margin-top: 100px;
+    font-size: 16px;
+    letter-spacing: 1.3px;
+    margin-left: $left-margin;
+    margin-right: 0;
     text-align: center;
 }
