--- a/MyWorkStylesheet.css
+++ b/MyWorkStylesheet.css
@@ -1,3 +1,39 @@
+/* IMPORTING DEPENDENCIES */
+@-webkit-keyframes appearance {
+  from {
+    opacity: 0.0;
+  }
+  to {
+    opacity: 1.0;
+  }
+}
+@keyframes appearance {
+  from {
+    opacity: 0.0;
+  }
+  to {
+    opacity: 1.0;
+  }
+}
+
+@-webkit-keyframes blink {
+  from {
+    border-color: black;
+  }
+  to {
+    border-color: #ddd3cf;
+  }
+}
+
+@keyframes blink {
+  from {
+    border-color: black;
+  }
+  to {
+    border-color: #ddd3cf;
+  }
+}
+
 /* BORDER BOX DECLARATION*/
 html,
 *,
@@ -86,7 +122,10 @@ html,
   margin-bottom: 20px;
   padding-right: 5px;
   padding-left: 5px;
-  border: 1px solid white;
+  border-top: 50px solid #2e2d2d;
+  border-bottom: 1px solid black;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
   border-radius: 6px;
 }
 
@@ -107,5 +146,61 @@ html,
   width: 100%;
   text-align: center;
   margin-bottom: 10px;
+}
+
+.footer {
+  width: 100%;
+  padding-top: 15px;
+  padding-bottom: 8px;
+}
+
+.footer.footer--modifier {
+  background-color: teal;
+  color: white;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+
+.footer__paragraph {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 15px;
+  text-align: center;
+  opacity: 0.8;
+}
+
+.footer__heading {
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 100;
+  margin-top: 15px;
+  opacity: 0.7;
+}
+
+.footer__list {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.footer__list .contact {
+  list-style-type: none;
+  text-align: center;
+  opacity: 0.7;
+}
+
+/* DESKTOP AND TABLET-SIZE */
+@media only screen and (min-width: 590px) {
+  .wrapper .main-content .section {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 44%;
+            flex: 0 0 44%;
+    margin-left: 4%;
+  }
+  .wrapper .main-content .section:last-child {
+    margin-left: 28%;
+  }
 }
 /*# sourceMappingURL=MyWorkStylesheet.css.map */
